# rust-tuto-opengl

./: Cargo.toml  index.html  memo.txt  start.bat
src/: camera.rs  input_handler.rs  lib.rs  shaders.rs
src/shaders/: fragment.glsl  vertex.glsl
