[package]
authors = ["Flender"]
edition = "2021"
name = "webgl_tuto"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1.2"
image = "0.25.4"
nalgebra-glm = "0.19.0"

[dependencies.web-sys]
version = "0.3.72"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlProgram',
  'ImageData',
  'WebGlShader',
  'Window',
  'KeyboardEvent',
  'MouseEvent'
]